Fix add/remove buttons being bigger then visible element

--- a/app/assets/stylesheets/quizzes.css.scss
+++ b/app/assets/stylesheets/quizzes.css.scss
@@ -59,3 +59,7 @@
 .cursor-pointer {
   cursor: pointer;
 }
+
+.add-task, .remove-task {
+  display: inline-block;
+}
